# lingua-fix

./: .gitignore  Cargo.toml  LinguaFix.command  README.md  package-lock.json  package.json
electron/: main.cjs  preload.cjs
electron/assets/: linguafix-app-icon-v1.icns
frontend/: index.html
frontend/src/: App.css  App.tsx  history.ts  index.css  linguafixClient.ts  providers.ts  types.ts  vite-env.d.ts
scripts/: LinguaFixLauncher.applescript  install-mac-app.sh
src/: main.rs
