[package]
name = "linguafix"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["json"] }
dirs = "6.0.0"
hex = "0.4.3"
hmac = "0.12.1"
percent-encoding = "2.3.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting", "macros"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
